# urban_renewal

./: .gitignore  404.html  LICENSE  Makefile  README.md  dvc.yaml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: static.yml
docs/: mkdocs.yml
docs/docs/: index.md  urban_renewal_project_locations_overtime.md
getting-started/: index.html
models/address_ner/: .gitignore  config.cfg
notebooks/: extract_addresses.ipynb
search/: search_index.json
urban_renewal/: __init__.py  config.py  create_address_ner_trainset.py  create_figures.py  dataset.py  features.py  geocode_addresses.py  nlp_extract_addresses.py  plots.py  preprocessing.py  regex_extract_addresses.py  scrape_urban_renewal_locations.py
urban_renewal/modeling/: predict.py  train.py
urban_renewal_project_locations_overtime/: index.html
