[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "urban_renewal"
version = "0.0.1"
description = "Visualizing and Analyzing Urban Renewal Projects in Chicago"
authors = [
  { name = "thedavidhackett" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["urban_renewal"]
include = ["pyproject.toml", "urban_renewal/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["urban_renewal"]
force-sort-within-sections = true

